--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -2,6 +2,7 @@
     "org": "hpcflow",
     "repo": "matflow-new",
     "app_name": "MatFlow",
+    "app_package": "matflow",
     "version_file": "matflow/_version.py",
     "release_branch": "main",
     "CLI_path": "matflow/cli.py",
