--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ on:
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
-    if: github.event.inputs.run_pre_commit == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_pre_commit == 'true'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -72,7 +72,7 @@ jobs:
 
   test:
     needs: pre-commit
-    if: github.event.inputs.run_unit_tests == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_unit_tests == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -119,7 +119,7 @@ jobs:
   test-CentOS:
     needs: pre-commit
     runs-on: ubuntu-latest
-    if: github.event.inputs.run_unit_tests == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_unit_tests == 'true'
     container:
       image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
@@ -153,7 +153,7 @@ jobs:
 
   test-invoc-cmd-ubuntu:
     runs-on: ubuntu-latest
-    if: github.event.inputs.run_invoc_cmd_tests == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_invoc_cmd_tests == 'true'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -227,7 +227,7 @@ jobs:
 
   test-invoc-cmd-macos:
     runs-on: macos-latest
-    if: github.event.inputs.run_invoc_cmd_tests == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_invoc_cmd_tests == 'true'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -301,7 +301,7 @@ jobs:
 
   test-invoc-cmd-windows:
     runs-on: windows-latest
-    if: github.event.inputs.run_invoc_cmd_tests == 'true'
+    if: github.event_name == 'pull_request' || github.event.inputs.run_invoc_cmd_tests == 'true'
     steps:
       - uses: actions/checkout@v3
         with:
