fix: add test deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,12 @@ pydata-sphinx-theme = "^0.13.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
+pexpect = "^4.8.0"
+papermill = "^2.4.0"
+ipykernel = "^6.25.1"
 
 [tool.poetry.group.pyinstaller.dependencies]
-pyinstaller = "^5.5"
+pyinstaller = "^5.13.0"
 
 [tool.poetry.extras]
 test = ["pytest"]
