--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -557,6 +557,7 @@ jobs:
 
       - name: Update doc version switcher
         run: |
+          curl https://raw.githubusercontent.com/{{ org }}/{{ repo }}/${{ github.head_ref }}/docs/make_vers_switcher.py --output docs/make_vers_switcher.py
           python docs/make_vers_switcher.py
 
       - name: Push changes
