--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ docs/source/reference/_autosummary/
 
 # generated via conf.py
 docs/source/reference/_generated
-
 docs/source/reference/demo_workflow*
+docs/source/reference/api.rst
 
 demo_workflows/
