--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [
     { include = "matflow" }
 ]
-exclude = ["matflow/data/workflows/demo_data"]
+exclude = ["matflow/data/demo_data"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
