--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -67,7 +67,7 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Get exectuable version name
+      - name: Get executable version name and store git SHA
         run: |
           $CUR_TAG = $(git describe --tags $(git rev-list --tags --max-count=1))
           echo "CUR_TAG is: $CUR_TAG"
@@ -75,6 +75,9 @@ jobs:
           $vers = git describe --tags
           echo "vers is: $vers"
           echo "vers=$vers" >> $env:GITHUB_ENV
+          $sha = git rev-parse HEAD
+          echo "sha is: $sha"
+          echo "sha=$sha" >> $env:GITHUB_ENV
 
       - name: Build with pyinstaller for Windows (file)
         if: github.event.inputs.build_onefile == 'true'
@@ -113,6 +116,10 @@ jobs:
         with:
           name: {{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-win-build
           path: {{ pyinstaller_dir }}/build/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-win
+
+      - name: Set demo data Github URL using current git SHA # instead of default which is current version tag
+        run: |
+          {{ pyinstaller_dir }}/dist/onefile/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-win.exe config set-github-demo-data-dir {% raw %}${{ env.sha }}{% endraw %}
 
       - name: Run test suite on the frozen app (file)
         if:  github.event.inputs.build_onefile == 'true'
@@ -154,7 +161,7 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Get exectuable version name
+      - name: Get executable version name and store git SHA
         run: |
           CUR_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo "CUR_TAG is: $CUR_TAG"
@@ -162,6 +169,9 @@ jobs:
           vers=$(git describe --tags)
           echo "vers is: $vers"
           echo "vers=$vers" >> $GITHUB_ENV
+          sha=$(git rev-parse HEAD)
+          echo "sha is: $sha"
+          echo "sha=$sha" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for macOS (file)
         if: github.event.inputs.build_onefile == 'true'
@@ -200,6 +210,10 @@ jobs:
         with:
           name: {{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-macOS-build
           path: {{ pyinstaller_dir }}/build/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-macOS
+
+      - name: Set demo data Github URL using current git SHA # instead of default which is current version tag
+        run: |
+          {{ pyinstaller_dir }}/dist/onefile/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-macOS config set-github-demo-data-dir {% raw %}${{ env.sha }}{% endraw %}
 
       - name: Run test suite on the frozen app (file)
         if:  github.event.inputs.build_onefile == 'true'
@@ -242,7 +256,7 @@ jobs:
       - name: Install dependencies
         run: poetry install --without dev
 
-      - name: Get exectuable version name
+      - name: Get executable version name and store git SHA
         run: |
           CUR_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo "CUR_TAG is: $CUR_TAG"
@@ -250,6 +264,9 @@ jobs:
           vers=$(git describe --tags)
           echo "vers is: $vers"
           echo "vers=$vers" >> $GITHUB_ENV
+          sha=$(git rev-parse HEAD)
+          echo "sha is: $sha"
+          echo "sha=$sha" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for CentOS (file)
         if: github.event.inputs.build_onefile == 'true'
@@ -288,6 +305,10 @@ jobs:
         with:
           name: {{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux-build
           path: {{ pyinstaller_dir }}/build/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux
+
+      - name: Set demo data Github URL using current git SHA # instead of default which is current version tag
+        run: |
+          {{ pyinstaller_dir }}/dist/onefile/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux config set-github-demo-data-dir {% raw %}${{ env.sha }}{% endraw %}
 
       - name: Run test suite on the frozen app (file)
         if: github.event.inputs.build_onefile == 'true'
