--- a/matflow/data/demo_data_manifest/demo_data_manifest.json
+++ b/matflow/data/demo_data_manifest/demo_data_manifest.json
@@ -4,5 +4,8 @@
     },
     "texture_Al.ctf": {
         "in_zip": "texture_Al.zip"
+    },
+    "surfalex_tensile_test.csv": {
+        "in_zip": "surfalex_tensile_test.zip"
     }
 }
