feat: support specifying damask solver

--- a/matflow/data/template_components/parameters.yaml
+++ b/matflow/data/template_components/parameters.yaml
@@ -96,6 +96,24 @@
 - type: damask_post_processing_result
 - type: damask_viz
 - type: damask_viz_result
+- type: damask_solver
+  _validation:
+    - path: []
+      doc:
+        description: >
+          A dictionary that specifies which solver to use, for each considered physical
+          phenomenon (`mechanical`, `thermal`, or `damage`).
+        examples:
+          - >
+            To use the `spectral_polarization` mechanical solver instead of the default
+            `spectral_basic` solver, set to: `{"mechanical": "spectral_polarization"}`
+      condition:
+        and:
+          - value.type.equal_to: dict
+          - key.in: ["mechanical", "thermal", "damage"]
+    - path: [{ "type": "map_value" }]
+      condition:
+        value.type.equal_to: str
 - type: p1
 - type: p2
 - type: p3
