build: merge fixes

--- a/matflow/data/workflows/tension_DAMASK_Al.yaml
+++ b/matflow/data/workflows/tension_DAMASK_Al.yaml
@@ -82,7 +82,6 @@ tasks:
           - field_name: O
             increments: [{ values: [0, -1] }]
       damask_viz:
-        fields:
-          [F, F_p, P, sigma_vM, epsilon_V^0(F_p)_vM, IPFcolor_(0 0 1), phase]
+        fields: [F, F_p, P, sigma_vM, epsilon_V^0(F_p)_vM, IPFcolor_(0 0 1), phase]
         increments:
           - step: 20
